more llvm headers

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,26 @@
 *.a
 *.lib
 
+.ilk
+.pdb
+.suo
+.sdf
+.ipch
+.filters
+.user
+
+
 # Executables
 *.exe
 *.out
 *.app
+/gg_compiler/Debug
+/gg_compiler/*.filters
+/gg_compiler/gg_compiler/*.user
+/gg_compiler/*.sdf
+/gg_compiler/*.suo
+/ipch
+/Debug
+/*.sdf
+/*.suo
+/gg_compiler/*.user
