--- a/GGCompiler/GGCompiler.vcxproj
+++ b/GGCompiler/GGCompiler.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="GGCompiler.cpp" />
     <ClCompile Include="GGLLVMEmitter.cpp" />
     <ClCompile Include="GGMain.cpp" />
+    <ClCompile Include="GGParser.cpp" />
     <ClCompile Include="LLParser2.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
