--- a/GGCompiler/GGCompiler.vcxproj
+++ b/GGCompiler/GGCompiler.vcxproj
@@ -84,19 +84,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="GGCompiler.h" />
-    <ClInclude Include="GGLLVMEmitter.h" />
+    <ClInclude Include="GGParser.h" />
+    <ClInclude Include="GGUtils.h" />
     <ClInclude Include="LLParser2.h" />
+    <ClInclude Include="LLVMIRCompiler.h" />
     <ClInclude Include="precompile.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GGCompiler.cpp" />
-    <ClCompile Include="GGLLVMEmitter.cpp" />
     <ClCompile Include="GGMain.cpp" />
     <ClCompile Include="GGParser.cpp" />
+    <ClCompile Include="GGUtils.cpp" />
     <ClCompile Include="LLParser2.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="LLVMIRCompiler.cpp" />
     <ClCompile Include="precompile.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
