completely out of order compilation

--- a/GGCompiler/GGCompiler.vcxproj
+++ b/GGCompiler/GGCompiler.vcxproj
@@ -59,7 +59,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>LLVMAsmPrinter.lib;LLVMCodeGen.lib;LLVMCore.lib;LLVMIRReader.lib;LLVMMC.lib;LLVMScalarOpts.lib;LLVMSelectionDAG.lib;LLVMSupport.lib;LLVMTarget.lib;LLVMObject.lib;LLVMMCParser.lib;LLVMInstCombine.lib;LLVMTransformUtils.lib;LLVMipa.lib;LLVMAnalysis.lib;LLVMAsmParser.lib;LLVMBitReader.lib;LLVMX86CodeGen.lib;LLVMX86AsmPrinter.lib;LLVMX86AsmParser.lib;LLVMX86Desc.lib;LLVMX86Info.lib;LLVMX86Disassembler.lib;LLVMX86Utils.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>LLVMAsmPrinter.lib;LLVMCodeGen.lib;LLVMCore.lib;LLVMIRReader.lib;LLVMMC.lib;LLVMScalarOpts.lib;LLVMSelectionDAG.lib;LLVMSupport.lib;LLVMTarget.lib;LLVMObject.lib;LLVMMCParser.lib;LLVMInstCombine.lib;LLVMTransformUtils.lib;LLVMipa.lib;LLVMAnalysis.lib;LLVMAsmParser.lib;LLVMBitReader.lib;LLVMX86CodeGen.lib;LLVMX86AsmPrinter.lib;LLVMX86AsmParser.lib;LLVMX86Desc.lib;LLVMX86Info.lib;LLVMX86Disassembler.lib;LLVMX86Utils.lib;LLVMExecutionEngine.lib;LLVMInterpreter.lib;LLVMJIT.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ProjectReference />
     <PostBuildEvent>
