added command line arg to build different source file fixed compiler crash move char type to prelude

--- a/GGCompiler/GGCompiler.vcxproj
+++ b/GGCompiler/GGCompiler.vcxproj
@@ -109,6 +109,7 @@
     <None Include="..\int.gg" />
     <None Include="..\main.gg" />
     <None Include="..\prelude.gg" />
+    <None Include="..\tod.gg" />
     <None Include="..\vec2.gg" />
     <None Include="..\vec2i.gg" />
   </ItemGroup>
