--- a/GGCompiler/GGCompiler.vcxproj
+++ b/GGCompiler/GGCompiler.vcxproj
@@ -105,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\bool.gg" />
+    <None Include="..\breakout.gg" />
     <None Include="..\float.gg" />
     <None Include="..\int.gg" />
     <None Include="..\main.gg" />
@@ -112,6 +113,7 @@
     <None Include="..\tod.gg" />
     <None Include="..\vec2.gg" />
     <None Include="..\vec2i.gg" />
+    <None Include="..\void.gg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
